# jqc

./: .pre-commit-config.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  mise.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: audit-check.yml  mark-release-tagged.yml  release-please.yml  release.yml  unit-test.yml
src/: color.rs  edit.rs  edit_detect.rs  jaq.rs  main.rs  parser.rs  query.rs
tapes/: demo.tape
tests/: cli.rs
tests/fixtures/: config.jsonc  deno.jsonc  edge.jsonc  tricky.jsonc  tsconfig.jsonc  vscode-settings.jsonc
