[package]
name = "jqc"
version = "0.1.0"
edition = "2024"
description = "A jq-like CLI for JSONC (JSON with Comments)"
license = "MIT"

[[bin]]
name = "jqc"
path = "src/main.rs"

[dependencies]
jsonc-parser = { version = "0.32.3", features = ["cst"] }
jaq-core = "3.0.0"
jaq-json = "2.0.0"
jaq-std = "3.0.0"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
