[package]
name = "jqc"
version = "0.1.0"
edition = "2024"
description = "jq for JSONC — query, view, and edit JSON-with-Comments files without losing your comments."
license = "MIT"
repository = "https://github.com/muleyuck/jqc"
homepage = "https://github.com/muleyuck/jqc"

[[bin]]
name = "jqc"
path = "src/main.rs"

[dependencies]
jsonc-parser = { version = "0.32.3", features = ["cst", "serde_json", "serde"] }
jaq-core = "3.0.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = "3.0.0"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tempfile = "3.27.0"
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
